--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: simplesigs
-Title: What the Package Does (One Line, Title Case)
+Title: Extremely lightweight mutational signature processing tools
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Lovelace", "Luquette", , "lovelace_luquette@hms.harvard.edu", role = c("aut", "cre"))
+Description: Lightweight factor definitions that enable processing of single base substitution (SBS)
+    and insertion/deletion (ID) mutational signatures and utilities for plotting with standard
+    layouts and colors.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Imports: 
+    ggplot2
