--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(asig)
 export(cmp257)
+export(cosmic_sbs_to_simplesigs)
+export(ctx3)
 export(ctx_to_mutsig)
 export(dbs78)
 export(dbs78_cols)
@@ -11,6 +13,9 @@ export(geom_id83)
 export(geom_sbs96)
 export(id83)
 export(id83_cols)
+export(is_cosmic_sbs)
+export(plot_fancy_sbs96)
+export(sbs6)
 export(sbs96)
 export(sbs96_cols)
 export(sbs_cols)
